<resources>
    <string name="app_name">Hangin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string">Import</string>
    <string name="title_activity_hangin_bottom_bar">HanginBottomBar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_post">Post</string>
    <string name="title_map">Map</string>
    <string name="title_me">Me</string>
    <string name="title_notifications">Notifications</string>
</resources>
