<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomBarItems_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/bottomBarItems_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/bottomBarItems_post"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/title_post" />
    <item
        android:id="@+id/bottomBarItems_map"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/bottomBarItems_me"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_me"
        />

</menu>